# echo-blue

./: .gitignore  README.md  example_ble
accelerometer/: main.c
ble/: ble_scan.py  prj.conf
disaster_node/: CMakeLists.txt  prj.conf
disaster_node/boards/: m5stack_core2_procpu.overlay
disaster_node/include/: gps.h  kalman.h  ultrasonic.h
disaster_node/src/: main.c
gps/: CMakeLists.txt  prj.conf
gps/boards/: nrf52840dk_nrf52840.overlay
gps/src/: gps.c  gps.h  main.c
gui/: CMakeLists.txt  prj.conf
gui/boards/: m5stack_core2_esp32_procpu.overlay
gui/src/: display.c  display.h  font16x16.h  font32x48_nums.h  font8x8.h  main.c
haptics/: CMakeLists.txt  prj.conf
haptics/src/: haptics.c  haptics.h  main.c
piSDR/: Audio_Dashboard.py  Handle_Event.py  QLD_Fire_API.py  Record_Audio.py
touch/: CMakeLists.txt  prj.conf
touch/boards/: m5stack_core2_esp32_procpu.overlay
touch/src/: main.c
user_interface/: CMakeLists.txt  prj.conf
user_interface/boards/: m5stack_core2_esp32_procpu.overlay
user_interface/src/: ui.c  ui.h
